# n00b

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  TODO.txt  n00b.sln
enc_temp_folder/3141b09267c76762d5c11c35cbdc23c/: Position.cpp
enc_temp_folder/b31f1c444b78cdd699e4b3d36165cb/: Position.cpp
n00b/: Board.cpp  Board.h  Evaluation.cpp  Evaluation.h  Player.h  Position.cpp  Position.h  Search.h  attack.cpp  attack.h  bitscan.cpp  bitscan.h  board.cpp  board.h  commands.cpp  commands.h  defs.h  display.cpp  display.h  divide.h  enums.h  evaluation.h  fen.cpp  game.cpp  game.h  globals.h  magic.cpp  magic.h  main.cpp  makemove.cpp  makemove.h  movegen.cpp  movegen.h  moveorder.cpp  moveorder.h  n00b.cpp  n00b.vcxproj  n00b.vcxproj.filters  overloading.cpp  overloading.h  (+13 more)
src/: CMakeLists.txt  Position.cpp  Position.h  attack.h  bitscan.cpp  bitscan.h  display.cpp  display.h  divide.h  enums.h  evaluation.cpp  evaluation.h  fen.cpp  fen.h  game.cpp  magic.cpp  main.cpp  makemove.cpp  makemove.h  movegen.cpp  movegen.h  moveorder.cpp  moveorder.h  nnue_eval.cpp  nnue_eval.h  overloading.cpp  params.h  perft.cpp  perft.h  psqt.h  search.cpp  search.h  tt.cpp  zobrist.cpp  zobrist.h
src/nnue/: nnue.cpp  nnue.h
